--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "proxy": "https://json-to-excel-backend-j3nn5n1gt-gaurav-joshis-projects-1f07293c.vercel.app/",
   "dependencies": {
     "axios": "^1.7.9",
     "react": "^18.3.1",
